crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__unary__named_expression.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/unary/named_expression.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..18,
        body: Suite {
            range: 0..18,
            node_index: NodeIndex(None),
            statements: [
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 0..2,
                        value: UnaryOp(
                            ExprUnaryOp {
                                node_index: NodeIndex(None),
                                range: 0..2,
                                op: USub,
                                operand: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 1..2,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                    },
                ),
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 6..7,
                        value: NumberLiteral(
                            ExprNumberLiteral {
                                node_index: NodeIndex(None),
                                range: 6..7,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                    },
                ),
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 8..13,
                        value: UnaryOp(
                            ExprUnaryOp {
                                node_index: NodeIndex(None),
                                range: 8..13,
                                op: Not,
                                operand: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 12..13,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                    },
                ),
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 17..18,
                        value: NumberLiteral(
                            ExprNumberLiteral {
                                node_index: NodeIndex(None),
                                range: 17..18,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | -x := 1
  |    ^^ Syntax Error: Expected a statement
2 | not x := 1
  |


  |
1 | -x := 1
2 | not x := 1
  |       ^^ Syntax Error: Expected a statement
  |
