crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__unary__no_expression_0.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/unary/no_expression_0.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..10,
        body: Suite {
            range: 0..10,
            node_index: NodeIndex(None),
            statements: [
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 0..3,
                        value: UnaryOp(
                            ExprUnaryOp {
                                node_index: NodeIndex(None),
                                range: 0..3,
                                op: Not,
                                operand: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 3..3,
                                        id: Name(""),
                                        ctx: Invalid,
                                    },
                                ),
                            },
                        ),
                    },
                ),
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 5..10,
                        value: BinOp(
                            ExprBinOp {
                                node_index: NodeIndex(None),
                                range: 5..10,
                                left: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 5..6,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                op: Add,
                                right: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 9..10,
                                        id: Name("y"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | not
  |    ^ Syntax Error: Expected an expression
2 |
3 | x + y
  |
